--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>JQ's' HomePage</title>
+    <title>JQ HomePage</title>
 </head>
 <body>
     <p>First paragraph</p>
