--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -6,6 +6,10 @@
     <title>JQ HomePage</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html"> Homepage</a>
+        <a href="aboutme.html"> About Me</a>
+    </nav>
     <p>First paragraph</p>
 </body>
 </html>
