--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,12 @@
     <title>ABout Me</title>
   </head>
   <body>
-    
+    <nav>
+      <a href="index.html"> Homepage</a>
+      <a href="aboutme.html"> About Me</a>
+    </nav>
+    <h1> About Me</h1>
+    <p>First paragraph</p>
+    <p>Second paragraph</p>
   </body>
 </html>
